2000-02-09  Akim Demaille  <akim@epita.fr>

	* tests/base.m4: s/m4 -I ../m4 -I $at_top_srcdir/.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* autoheader.sh (debug): Initialize to `false', not 0.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Fix a bug: `libm4::define' was incorrectly registered.

	* libm4.m4 (libm4::define): Not only register, define too.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_COMPILE_CHECK): Use AU_DEFUN, remove the call
	to AC_OBSOLETE.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_PROVIDE): Use `m4_define', not `define'.
	Because of the namespace machinery this change makes `autoconf'
	about four times faster on complex `configure.in's.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Open the access to AH_ to users.

	* autoheader.m4 (autoheader::AH_DEFUN): New macro.
	* tests/tools.m4: New file, in charge of testing the scripts.
	All the dependencies adapted.
	* tests/actest.m4 (autoheader::AC_TATOOINE): New macro, used while
	testing autoheader.
	* tests/atspecific.m4: Create config.hin instead of config.h.in.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Because of commas and brackets, m4_split must mess with the
	quotes.

	* libm4.m4 (m4_split): Quote the elements of the list you produce.
	* tests/base.m4: New file, testing libm4.
	All callers adapted.
	Test m4_wrap.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CONFIG_UNIQUE): Strip the `:foo.in' part
	yourself, in order to give better error messages.
	(AC_CONFIG_IF_MEMBER): Adapted to the above change.
	Quote some regexp active characters ([+.*]).
	Suggested by Alexandre Oliva.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_INCLUDES_DEFAULT): Make it more robust to
	the fact it is used non quoted.
	Reported by Jim Meyering.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_OUTPUT_FILES): Simplify some excess in
	changequote.
	(AC_OUTPUT_SUBDIRS): Likewise.
